macro/tests/ui/fail/02-missing-in-keyword.rs
use liquid_macro::seq;

seq!(in 1..10 {
    // nothing
});

fn main() {}
