macro/tests/ui/fail/02-missing-in-keyword.stderr
error: expected `in`
 --> $DIR/02-missing-in-keyword.rs:3:9
  |
3 | seq!(in 1..10 {
  |         ^
